# MuseTalk

./: app.py  pyproject.toml  stream.py
configs/inference/: realtime.yaml
scripts/: realtime_inference.py
